# smathhacks2026

./: .gitignore  README.md  client.py  command_aliases.sh  docker-compose.yml  main.py  pyproject.toml
backend/: db.py  detector.py  drift_predictor.py  main.py  models.py  requirements.txt  schema.sql
backend/scripts/: send_report.sh  simulate.py
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  leaflet-plugins.d.ts  react-leaflet-cluster.d.ts
client/src/components/: add-boat-dialog.tsx  admin-page.tsx  analytics-page.tsx  boat-detail-sheet.tsx  boat-markers.tsx  detection-layer.tsx  heatmap-layer.tsx  layer-toggles.tsx  map-view.tsx  stats-overlay.tsx  time-slider.tsx  top-bar.tsx  trash-layer.tsx
client/src/components/ui/: checkbox.tsx  dialog.tsx  select.tsx  sheet.tsx
client/src/lib/: api.ts  colors.ts  mock-data.ts
client/src/types/: index.ts
drift-sim/: current.py
holoocean/: api.py  main.py  t.py  t1.py  test_package.py
scripts/: demo_client.py  reset.sh  seed_demo.py
train/: .gitignore  main.py  pyproject.toml  train.py
train/annotations/: data.yaml  train.txt
train/dataset/: data.yaml
train/dataset/labels/: train.cache
train/runs/train/: args.yaml
train/runs/train2/: args.yaml  results.csv
vision/: download.py  train.py  vision.py
vision/Floating-Trash-Detection-1/: README.dataset.txt  README.roboflow.txt  data.yaml
vision/Floating-Trash-Detection-1/train/: labels.cache
vision/Floating-Trash-Detection-1/valid/: labels.cache
(+422 files in other folders)
