[project]
name = "smathhacks26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "opencv-python>=4.13.0.92",
    "opendrift>=1.14.8",
    "psutil>=7.2.2",
    "psycopg[binary]>=3.3.3",
    "ultralytics>=8.4.22",
    "uvicorn>=0.41.0",
]
